# ADB-Bug-Report-Generator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PHASE_1_AUDIT.md  README.md  generate_bug_report.py  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml
examples/: README.md  sample_archive_tree.txt  sample_metadata.json  sample_run_summary.txt  sample_terminal_output.txt
src/adb_bug_report_generator/: __init__.py  __main__.py  adb.py  cli.py  collector.py  compatibility.py  exceptions.py  filesystem.py  logging_config.py
tests/: __init__.py  _bootstrap.py
tests/e2e/: README.md  __init__.py  manual_validation_checklist.md  test_emulator_smoke.py
tests/integration/: README.md  __init__.py  fakes.py  test_cli_run.py
tests/unit/: __init__.py  test_adb.py  test_collector.py  test_compatibility.py  test_filesystem.py
